// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DedicatedIpSummarySection renders count and zero cost 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "content": "Add Dedicated IPs",
        "disabled": false,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      1
       for 
      <DedicatedIpCost
        plan={
          Object {
            "canPurchaseIps": true,
            "includesIp": true,
          }
        }
        quantity={0}
      />
    </h6>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders disabled add button, count, cost, and max plan notice 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "content": "Add Dedicated IPs",
        "disabled": true,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      4
       for 
      <DedicatedIpCost
        plan={
          Object {
            "canPurchaseIps": true,
          }
        }
        quantity={4}
      />
    </h6>
    <p>
      You have reached the maximum allowed.
    </p>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders upgrade button and zero count 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "Upgrade Now",
        "to": "/account/billing/plan",
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      0
    </h6>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders zero count and first is free notice 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "content": "Add Dedicated IPs",
        "disabled": false,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      0
    </h6>
    <p>
      First IP is free!
    </p>
  </LabelledValue>
</Panel.Section>
`;
